<resources>
    <string name="app_name">智会</string>
    <string name="alert_title">智会提醒</string>
    <string name="sending_request">正在发送请求…</string>
    <string name="loading">加载中…</string>
    <string name="no_more_item">没有更多</string>
    <string name="exit_app">确定要退出智会应用吗？</string>
    <string name="exit">退出</string>
    <string name="your_account_expired">您的登录已失效，请重新登录！</string>
    <string name="network_error">无法连接服务器，可能网络状态不佳或没有网络信号！</string>
    <string name="splash_content_description">iMeeting application splash image</string>
    <string name="account_setting_nav_title_text">账户设置</string>
    <string name="register_btn_title">注册新用户</string>
    <string name="login_name_editText_hint">请输入您注册的手机号码</string>
    <string name="login_pwd_editText_hint">请输入您的密码</string>
    <string name="remember_pwd_textView_text">记住密码</string>
    <string name="login_confirm_btn_title">登录</string>
    <string name="number_cannot_be_null">请输入手机号码</string>
    <string name="password_cannot_be_null">请输入密码</string>
    <string name="logining">正在登录</string>
    <string name="login_error">登录出错，请稍后重试！</string>
    <string name="login_failed">用户名或密码错误！</string>
    <string name="forget_psw"><u>忘记密码</u></string>
    <string name="get_password">找回密码</string>
    <string name="ur_pwd_is_sent_to_your_phone">新密码已经发送到您注册的手机上，请重新登录，并即时修改密码。</string>
    <string name="no_such_phone">你输入的号码尚未注册，您可以到首页注册一个新账号</string>
    <string name="account_register_nav_title_text">账户注册</string>
    <string name="register_step1_textView_text">第一步</string>
    <string name="register_step1_description">输入手机号，获取验证码</string>
    <string name="verificationCode_editText_hint">输入注册手机号码</string>
    <string name="get_verificationCode_btn_title">获取验证码</string>
    <string name="register_step1_comment">（您的手机号码仅用于身份验证，我们不会向您发送垃圾短信。）</string>
    <string name="invalid_phone_number">手机号码无效！</string>
    <string name="existed_phone_number">手机号码已存在！</string>
    <string name="error_in_retrieve_auth_code">获取验证码出错，请重试！</string>
    <string name="register_step2_textView_text">第二步</string>
    <string name="register_step2_description">输入验证码，点击下一步验证</string>
    <string name="verificationCode_verify_editText_hint">输入验证码</string>
    <string name="verify_verificationCode_btn_title">下一步</string>
    <string name="pls_input_auth_code">请输入验证码</string>
    <string name="verifying_auth_code">正在验证…</string>
    <string name="wrong_auth_code">验证码错误, 请重新输入！</string>
    <string name="auth_code_timeout">验证码过期，请重新获取！</string>
    <string name="auth_error">验证出错，请重试！</string>
    <string name="register_step3_textView_text">第三步</string>
    <string name="register_step3_description">完成注册</string>
    <string name="nickname_edittext_hint">输入名称</string>
    <string name="pwd_editText_hint">输入密码</string>
    <string name="confirmationPwd_editText_hint">输入确认密码</string>
    <string name="register_finish_btn_title">完成注册</string>
    <string name="pls_input_nickname">请输入名称</string>
    <string name="pls_input_pwd">请输入密码</string>
    <string name="pls_input_confirm_pwd">请输入确认密码</string>
    <string name="pwd1_is_different_from_pwd2">两次密码不一致</string>
    <string name="register_ok">账户注册成功，请在账户设置界面登录</string>
    <string name="register_timeout">此次注册操作已过期，请重新开始</string>
    <string name="error_in_regsiter">注册过程出错，请重试！</string>
    <string name="finishing_register">正在完成注册…</string>
    <string name="menu_refresh_myTalkingGroupList">刷新</string>
    <string name="myTalkingGroup_history_list_nav_title_text">我的群聊</string>
    <string name="setting_nav_btn_title">设置</string>
    <string name="newTalkingGroup_btn_title">新建群聊</string>
    <string name="error_in_join_group">无法进入当前群聊, 请稍后重试！</string>
    <string name="error_in_create_group">创建群聊失败</string>
    <string name="payment_required">账户余额不足，请充值后再使用!</string>
    <string name="join_conf_forbidden">当前您无法进入群聊，可能已被发起人移除。</string>
    <string name="delete_group">删除群聊</string>
    <string name="select_operation">选择操作</string>
    <string name="error_in_del_group">删除群聊失败</string>
    <string name="group_talk_title">群聊号：</string>
    <string name="video">视频</string>
    <string name="open_camera">打开镜头</string>
    <string name="close_camera">关闭镜头</string>
    <string name="camera_cannot_open">摄像头无法打开！</string>
    <string name="video_live_disconnected">因网络问题，视频连接已断开</string>
    <string name="video_live_cannot_establish">因网络问题，无法建立视频连接！</string>
    <string name="connecting_video_server">正在建立视频连接…</string>
    <string name="add_member">添加成员</string>
    <string name="sms_invite">短信邀请</string>
    <string name="dial_all">呼叫全体</string>
    <string name="is_need_call_all_member">确定要呼叫所有未参会成员吗？</string>
    <string name="no_member_need_to_call">没有需要呼叫的成员！</string>
    <string name="call_all_failed">全体呼叫失败…，请稍后重试</string>
    <string name="calling_all">正在呼叫所有未参会成员…</string>
    <string name="phone_not_supported">您的设备不支持电话功能！</string>
    <string name="dial">开始语音</string>
    <string name="calling_in">正在接入</string>
    <string name="call_in">接入</string>
    <string name="hangup_talking">结束语音</string>
    <string name="leave">我要离开</string>
    <string name="calling">正在呼叫</string>
    <string name="talking">正在通话</string>
    <string name="call_failed">呼叫失败</string>
    <string name="hanged_up">通话已断</string>
    <string name="sb_is_kicked_out">%s已被移出群聊</string>
    <string name="you_have_been_kicked_out">您被发起人移出群聊！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="do_you_want_to_leave_group">您要离开当前群聊吗？\n点击确定后系统将挂断您的电话，不影响其他人的使用。</string>
    <string name="watch_video">观看视频</string>
    <string name="no_video_live">此成员尚未打开视频</string>
    <string name="member_not_online">此成员不在线</string>
    <string name="video_is_on">视频已开启</string>
    <string name="tap_here_to_select_video">轻点此处选择成员视频</string>
    <string name="no_videos_living_now">当前没有成员开启视频</string>
    <string name="pls_select_video_to_watch">请选择要观看的成员视频</string>
    <string name="stop_watching_video">停止观看</string>
    <string name="select_no_one">谁也不选</string>
    <string name="call">呼叫</string>
    <string name="hang_up">挂断</string>
    <string name="kick_out">移出群聊</string>
    <string name="send_sms">发送短信</string>
    <string name="sms_no_support">您的设备不支持短信功能！</string>
    <string name="operation_on_sb">选择对 %s 的操作</string>
    <string name="call_is_forbidden_for_sb">不允许呼叫%s</string>
    <string name="hangup_is_forbidden_for_sb">不允许挂断%s</string>
    <string name="kickout_is_forbidden_for_sb">不允许移出%s</string>
    <string name="hangup_failed">挂断失败</string>
    <string name="kickout_failed">移出失败</string>
    <string name="invite_sms_body">请拨打055162379997加入多方通话，会议号：%s</string>
    <string name="no_one_to_invite">没有需要邀请的成员！</string>
    <string name="call_is_forbidden_for_you">您的语音接入操作不被允许</string>
    <string name="call_in_failed">语音接入失败！</string>
    <string name="hangup_is_forbidden_for_you">您的结束操作不被允许！</string>
    <string name="hangup_talking_failed">结束操作失败！</string>
    <string name="do_you_want_to_call_into_group_talking">需要接入语音群聊吗？</string>
    <string name="remember_ur_groupid">记住您的群聊号（%s），电话中要输入的哦!</string>
    <string name="do_you_wanna_end_group_talking">要结束当前语音群聊吗？</string>
    <string name="end_group_talking">结束语音</string>
    <string name="close_talkgroup">挂断全体并离开</string>
    <string name="only_leave_talkgroup">挂断自己并离开</string>
    <string name="destroying_talkgroup">正在结束群聊…</string>
    <string name="talkgroup_has_been_closed">发起人关闭了当前群聊！</string>
    <string name="loading_video">正在加载视频…</string>
    <string name="video_load_failed">视频加载失败！</string>
    <string name="setting_nav_title_text">设置</string>
    <string name="accountSetting_btn_title">账户设置</string>
    <string name="accountCharge_btn_title">账户充值</string>
    <string name="addressbook_upload_btn_title">备份通讯录</string>
    <string name="need_upload_addressbook">确定备份通讯录到服务器吗？</string>
    <string name="backup">备份</string>
    <string name="uploading_address_book">正在备份通讯录…</string>
    <string name="addressbook_upload_ok">通讯录备份成功！</string>
    <string name="addressbook_upload_fail">通讯录备份失败，请稍后重试！</string>
    <string name="support_btn_title">帮助</string>
    <string name="about_btn_title">关于</string>
    <string name="share_by_sms">通过短信分享本应用</string>
    <string name="account_changePSW_item">修改密码</string>
    <string name="old_psw">原有密码：</string>
    <string name="new_psw">新的密码：</string>
    <string name="confirm_psw">确认密码：</string>
    <string name="contactSelect_nav_title_text">添加成员</string>
    <string name="back_nav_btn_title">返回</string>
    <string name="openTalkingGroup_nav_btn_title">开启</string>
    <string name="confirmAdd_nav_btn_title">确定</string>
    <string name="addressBook_textView_text">通讯录</string>
    <string name="in7preinTalkingGroup_textView_text">已添加成员</string>
    <string name="contact_search_editText_hint">搜索联系人</string>
    <string name="add_notExistedInABContact_editText_hint">请输入手机号码</string>
    <string name="add_notExistedInABContact_confirmBtn_title">添加</string>
    <string name="contact_hasNoPhone_alertDialog_title">此人没有号码</string>
    <string name="contact_hasNoPhone_alertDialog_reselectBtn_title">重新选择</string>
    <string name="contactPhones_selectPopupWindow_titleTextView_text">选择 *** 加入群聊的号码</string>
    <string name="addPhonesAreaCode_PopupWindow_titleTextView_text">修改号码（固话加拨区号）</string>
    <string name="wrong_phonenumber_format">号码格式有误，请检查（固话加拨区号）</string>
    <string name="wrong_phone_format_inform_titleTextView_text">号码***可能不是电话号码，或者是固定电话但未加区号。\n请选择是否修改:</string>
    <string name="add_phoneAreaCode_confirmBtn_title">修改</string>
    <string name="contactPhones_selectPopupWindow_cancelBtn_title">取消</string>
    <string name="error_in_invite_member">邀请新成员失败！</string>
    <string name="no_new_member_selected">没有选择新成员！</string>
    <string name="add_manualInputContact_popupWindow_dismiss_btn_title">×</string>
    <string name="add_manualInputContact_editText_hint">请输入手机号码</string>
    <string name="add_manualInputContact_confirmBtn_title">添加</string>
    <string name="modify_btn_title">修改</string>
    <string name="old_psw_not_equal">输入的原有密码与账号原有密码不一致，请检查</string>
    <string name="new_confirm_not_equal">新的密码与确认密码不一致，请检查</string>
    <string name="modify_success">密码修改成功！</string>
    <string name="old_psw_not_null">请输入原有密码</string>
    <string name="new_confirm_not_null">请输入新的密码或确认密码</string>
    <string name="auth_not_pass">原有密码输入错误</string>
    <string name="new_psw_error">新密码为空，或者两次输入不一致</string>
    <string name="server_error">服务器出错</string>
    <string name="app_share_content">使用智会开电话会议，方便快捷。下载：http://www.wetalking.net/appdownload</string>
    <string name="support_nav_title_text">帮助</string>
    <string name="support_loading_textView_textHeader">正在加载&#8230;，</string>
    <string name="support_loading_progressBar_max">100</string>
    <string name="about_nav_title_text">关于</string>
    <string name="product_name">智会</string>
    <string name="product_description">高效能人士的智慧选择</string>
    <string name="product_version">版本号:</string>
    <string name="programming_design">程序设计</string>
    <string name="programming_authors">王星\t\t翟绍虎</string>
    <string name="ui_design">UI设计</string>
    <string name="ui_designers">李欣</string>
    <string name="copyright">Copyright © 2012</string>
    <string name="copyright_ownership">合肥优云信息技术有限公司 保留所有权利</string>
    <string name="acknowledgement">鸣谢</string>
    <string name="acknowledgement_organizations">南京富拓网络科技有限公司</string>
    <string name="account_charge">账户充值</string>
    <string name="your_account_balance_is">账户余额：</string>
    <string name="no_enough_money_do_charge">充值请向下看</string>
    <string name="card_charge">智会卡充值</string>
    <string name="input_card_number">请输入智会卡卡号</string>
    <string name="input_card_pwd">请输入智会卡密码</string>
    <string name="charge">充值</string>
    <string name="get_balance_failed">获取账户余额失败！</string>
    <string name="getting_balance">正在获取账户余额…</string>
    <string name="charging">正在充值…</string>
</resources>