<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:id="@+id/accountSettingTopMarginView"
        android:layout_width="fill_parent"
        android:layout_height="55dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/img_accountsetting_bg"
        android:orientation="vertical"
        android:paddingBottom="55dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp" >

        <EditText
            android:id="@+id/login_name_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:ellipsize="end"
            android:hint="@string/login_name_editText_hint"
            android:inputType="phone"
            android:textColor="@android:color/black" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/login_pwd_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:ellipsize="end"
            android:hint="@string/login_pwd_editText_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/account_remember_psw_cbtn"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:background="@drawable/checkbox_bg"
                    android:button="@null" />

                <TextView
                    android:id="@+id/remember_pwd_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:textSize="14sp"
                    android:text="@string/remember_pwd_textView_text"
                    android:textColor="@color/dim_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:clickable="true"
                    android:onClick="onForgetPSWBtnClick"
                    android:src="@drawable/r_box_2" />

                <TextView
                    android:id="@+id/account_forget_psw_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:onClick="onForgetPSWBtnClick"
                    android:text="@string/forget_psw"
                    android:textColor="@color/dim_gray" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/login_confirm_btn"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/accountsetting7register7newtalkinggroup_btn_bg"
            android:onClick="onLogin"
            android:text="@string/login_confirm_btn_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/register_btn_bg"
            android:onClick="onRegister"
            android:text="@string/register_btn_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>