<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_transparent" >
    <LinearLayout
        android:id="@+id/wrong_phoneFormat_popupWindow_relativeLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/add_manualinputcontact_popupwindow_relativelayout_bg"
        android:gravity="center" 
        android:orientation="vertical"
        android:paddingBottom="14dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="14dp" >
        
        <TextView
            android:id="@+id/wrong_phoneFormat_popupWindow_titleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/wrong_phone_format_inform_titleTextView_text"
            android:textColor="@android:color/white" />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal|center_vertical"
            >

	        <Button
	            android:id="@+id/wrong_phoneFormat_popupWindow_confirmBtn"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dp"
	            android:background="@drawable/add_manualinputcontact_popupwindow_confirmbtn_bg"
	            android:text="@string/add_phoneAreaCode_confirmBtn_title"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="@drawable/component_normal7pressed_textcolor" />
	        
	        <Button
	            android:id="@+id/wrong_phoneFormat_popupWindow_cancelBtn"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:background="@drawable/add_manualinputcontact_popupwindow_confirmbtn_bg"
	            android:text="@string/contactPhones_selectPopupWindow_cancelBtn_title"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="@drawable/component_normal7pressed_textcolor"
	            />
            </LinearLayout>
    </LinearLayout>

</FrameLayout>